# paludification_toad

./: README.md  gate  magpie  morpho
ansible/: template_generic_base_playbook.yaml  template_playbook.yaml
ansible/2x2cluster/: proxy20
ansible/2x2cluster/files/: gateway_pf.conf  server_pf.conf
ansible/files/: TEMPLATE_certbot  TEMPLATE_wrap  disk_report.py  enforcer.sh  event_report.py  gate  limits.py  magpie  make_toad.sh  morpho  net_report.py  packages.txt  pf.conf  proc_report.py  sshd_config_template  tim  tim_policy.yaml
ansible/paludification/: pyproject.toml
kiagatewaybsd/: Cargo.toml
kiagatewaybsd/src/: main.rs
kiagatewaybsd2/: Cargo.toml
kiagatewaybsd2/src/: main.rs
kiamagpie/: README.md  available_default.go  available_linux.go  available_openbsd.go  main.go
kiaproxybsd/: Cargo.toml
kiaproxybsd/src/: main.rs
morphobsd/: Cargo.toml
morphobsd/src/: main.rs
redirectrix/: README.md
redirectrixbsd/: Cargo.toml
redirectrixbsd/src/: main.rs
terraform/: main.tf  outputs.tf
timbsd/: Cargo.toml
timbsd/src/: main.rs
